Added labels for each category drive

--- a/src/index.html
+++ b/src/index.html
@@ -96,33 +96,43 @@
             <p class="subheading">Browse different types of donation drives to find the causes you care about.</p>
             <div class="categoryGrid">
                 <a href="healthcare.html" class="categoryCard">
+                    <h3>Healthcare & Medicine</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="disasters.html" class="categoryCard">
+                    <h3>Disasters & Calamities</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="food.html" class="categoryCard">
+                     <h3>Food & Beverages</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="clothing.html" class="categoryCard">
+                    <h3>Clothing & Apparel</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="education.html" class="categoryCard">
+                    <h3>School & Education Supplies</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="toys.html" class="categoryCard">
+                    <h3>Toys & Recreational Items</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="furniture.html" class="categoryCard">
+                    <h3>Household & Furniture</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="hygiene.html" class="categoryCard">
+                    <h3>Hygiene & Personal Care</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="monetary.html" class="categoryCard lastRow">
+                    <h3>Monetary Donations</h3>
                     <button class="btnView">View Drives</button>
                 </a>
                 <a href="miscellaneous.html" class="categoryCard lastRow">
+                    <h3>Miscellaneous or Special Requests</h3>
                     <button class="btnView">View Drives</button>
                 </a>
             </div>
