Added category cards, modals, and fixed expansion of modals

--- a/src/index.html
+++ b/src/index.html
@@ -214,16 +214,16 @@
                     <p>Connecting you with the tools you need to make impact in whatever cause you choose.</p>
                 </div>
                 <div class="footerBox">
-                    <h4>ABOUT US</h4>
+                    <h4>ABOUT US:</h4>
                     <a href="#about">About</a>
-                    <a href="#privacy">Privacy Policy</a>
+                    <a href="#privacy">Feedback</a>
                     <a href="#terms">Terms and Use</a>
                 </div>
                 <div class="footerBox">
-                    <h4>FOLLOW US</h4>
-                    <a href="#">Twitter</a>
+                    <h4>FOLLOW US:</h4>
+                    <a href="#">Facebook</a>
                     <a href="#">Instagram</a>
-                    <a href="#">Blog</a>
+                    <a href="#">Twitter</a>
                 </div>
             </div>
         </div>
