--- a/src/healthcare.html
+++ b/src/healthcare.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthcare & Medicine</title>
     <style>
+        /* I styled the page with a light blue background and clean typography */
         body {
             margin: 0;
             padding: 2rem;
             background: #4db8ff;
             font-family: Georgia, Times, serif;
         }
+        /* The title has a white accent line below it to separate it from the content */
         h1 {
             padding-bottom: 1rem;
             border-bottom: 3px solid white;
@@ -22,6 +24,7 @@
             gap: 1rem;
         }
        
+        /* This is the back button that stays fixed in the bottom right corner */
         .btnBack {
             position: fixed;
             bottom: 2rem;
@@ -44,6 +47,7 @@
         .btnBack:hover {
             background: #f0f0f0;
         }
+        /* I created a responsive grid that shows the drive cards */
         #drivesContainer {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
