--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,32 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
+    <!-- This is my main navigation header that stays at the top of the page -->
     <header class="mainHeader">
         <div class="wrapper">
             <div class="navBar">
                 <div class="siteLogo">DriveGo</div>
+                <!-- I created a navigation menu with links to different sections of the page -->
                 <nav class="navigation" id="mainNav">
                     <a href="#home">Home</a>
                     <a href="#aboutSec">About</a>
                     <a href="#categorySection">Categories</a>
                     <a href="#footerArea">Contact</a>
                 </nav>
+                <!-- This button opens the form to submit a new donation drive -->
                 <button class="btnSubmit" id="openModal">Submit a Drive</button>
+                <!-- This is the hamburger menu button for mobile devices -->
                 <button class="menuBtn" id="menuToggle">☰</button>
             </div>
         </div>
     </header>
 
+    <!-- This is the modal popup form where users can submit new donation drives -->
     <div id="submitModal" class="modal">
         <div class="modalContent">
             <span class="closeModal">&times;</span>
             <h2>Submit a Drive</h2>
+            <!-- I collect information about the donation drive through this form -->
             <form id="driveForm">
                 <label>Name:</label>
                 <input type="text" id="driveName" required>
@@ -41,6 +47,7 @@
                 <label>Photo URL:</label>
                 <input type="url" id="drivePhoto">
                 
+                <!-- Users select which category their drive belongs to -->
                 <label>Category:</label>
                 <select id="driveCategory" required>
                     <option value="healthcare">Healthcare & Medicine</option>
@@ -60,19 +67,23 @@
         </div>
     </div>
 
+    <!-- This is my hero section - the first thing people see when they visit -->
     <section class="heroSection" id="home">
         <div class="hero-background-image"></div>
         <div class="heroOverlay"></div>
         <div class="wrapper heroBox">
             <h1>Discover and explore <br>donation drives <br>near you.</h1>
             <p>Browse the donation drives and support what you want to see in your local community.</p>
+            <!-- This button smoothly scrolls down to the categories section -->
             <button class="btnBrowse" onclick="document.getElementById('categorySection').scrollIntoView({behavior: 'smooth'})">Browse Drives</button>
         </div>
     </section>
 
+    <!-- This section explains what my website does and why it matters -->
     <section class="aboutSection" id="aboutSec">
         <div class="wrapper">
             <h2 class="sectionHeading">Connect. Discover. Make a Difference.</h2>
+            <!-- I created three cards to explain the mission of DriveGo -->
             <div class="infoCards">
                 <div class="infoBox">
                     <h3>What We Do</h3>
@@ -87,17 +98,22 @@
                     <p>Every donation counts, no matter the size. By showcasing drives in one organized platform, we help ensure that more people and communities receive the support they need, while encouraging a culture of giving and compassion. Browse any categories where you feel you help is needed the most.</p>
                 </div>
             </div>
+            <!-- A scroll indicator to help users navigate -->
             <button class="scrollBtn" onclick="document.getElementById('categorySection').scrollIntoView({behavior: 'smooth'})">↓</button>
         </div>
     </section>
 
+    <!-- This is where I display all the different donation categories -->
     <section class="categoryArea" id="categorySection">
         <div class="wrapper">
             <h2 class="sectionHeading">Explore Categories</h2>
             <p class="subheading">Browse different types of donation drives to find the causes you care about.</p>
+            <!-- I organized categories into a grid layout for easy browsing -->
             <div class="categoryGrid">
+                <!-- Each category card links to a specific category page -->
                 <a href="healthcare.html" class="categoryCard">
                     <div class="categoryIcon" aria-hidden="true">
+                        <!-- I used Bootstrap Icons for visual representation -->
                         <!-- Healthcare / capsule-pill icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-capsule-pill" viewBox="0 0 16 16" aria-hidden="true">
                           <path d="M11.02 5.364a3 3 0 0 0-4.242-4.243L1.121 6.778a3 3 0 1 0 4.243 4.243l5.657-5.657Zm-6.413-.657 2.878-2.879a2 2 0 1 1 2.829 2.829L7.435 7.536z"/>
